# stryboh

./: Cargo.toml  Dockerfile
.github/workflows/: build-docker-image.yml  docker-image.yml
src/: main.rs  telemetry.rs
