[package]
name = "stryboh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azeventhubs = "0.19.4"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["macros"] }
log = "0.4.21"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
fred = { version = "8.0.5", features = ["time-series"] }
env_logger = "0.11.3"
